--- a/package.json
+++ b/package.json
@@ -9,12 +9,41 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@popperjs/core": "^2.11.6",
+    "axios": "^1.3.4",
+    "lodash-es": "^4.17.21",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vitepress-demo-preview/component": "^2.3.0",
+    "@vitepress-demo-preview/plugin": "^1.1.9",
+    "@vue-macros/volar": "^0.8.1",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/test-utils": "^2.3.0",
+    "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "jsdom": "^21.1.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-color-mix": "^1.1.0",
+    "postcss-each": "^1.1.0",
+    "postcss-each-variables": "^0.3.0",
+    "postcss-for": "^2.1.1",
+    "postcss-nested": "^6.0.1",
     "typescript": "^5.0.2",
+    "unplugin-vue-macros": "^1.8.1",
     "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1",
+    "vitepress": "^1.0.0-alpha.65",
+    "vitest": "^0.29.2",
     "vue-tsc": "^1.8.5"
   }
 }
